--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.ddo.kingdragon"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="jp.ddo.kingdragon"
+          android:versionCode="1"
+          android:versionName="1.0" >
     <uses-sdk android:targetSdkVersion="10"
-        android:minSdkVersion="10" />
+              android:minSdkVersion="10" />
 
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.nfc" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name=".StudentListMakerActivity"
-            android:label="@string/app_name" >
+    <application android:icon="@drawable/ic_launcher"
+                 android:label="@string/app_name" >
+        <activity android:name=".StudentListMakerActivity"
+                  android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
