--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,11 +14,16 @@
     <application android:icon="@drawable/ic_launcher"
                  android:label="@string/app_name" >
         <activity android:name=".StudentListMakerActivity"
-                  android:label="@string/app_name" >
+                  android:label="@string/app_name"
+                  android:configChanges="keyboard|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".FileChooseActivity"
+                  android:label="@string/file_choose_title" >
         </activity>
     </application>
 </manifest>
