--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="jp.ddo.kingdragon"
           android:versionCode="1"
-          android:versionName="1.0" >
+          android:versionName="1.0">
     <uses-sdk android:targetSdkVersion="10"
               android:minSdkVersion="10" />
 
@@ -12,10 +12,11 @@
     <uses-feature android:name="android.hardware.nfc" />
 
     <application android:icon="@drawable/ic_launcher"
-                 android:label="@string/app_name" >
+                 android:label="@string/app_name">
         <activity android:name=".StudentListMakerActivity"
                   android:label="@string/app_name"
-                  android:configChanges="keyboard|keyboardHidden" >
+                  android:screenOrientation="portrait"
+                  android:configChanges="keyboard|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -23,7 +24,8 @@
         </activity>
 
         <activity android:name=".FileChooseActivity"
-                  android:label="@string/file_choose_title" >
+                  android:label="@string/file_choose_title"
+                  android:screenOrientation="portrait">
         </activity>
     </application>
 </manifest>
