--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,6 @@
                  android:label="@string/app_name">
         <activity android:name=".StudentListMakerActivity"
                   android:label="@string/app_name"
-                  android:screenOrientation="portrait"
                   android:configChanges="keyboard|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +23,7 @@
         </activity>
 
         <activity android:name=".FileChooseActivity"
-                  android:label="@string/file_choose_title"
-                  android:screenOrientation="portrait">
+                  android:label="@string/file_choose_title">
         </activity>
     </application>
 </manifest>
