--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".listmaker.FileChooseActivity"
+        <activity android:name=".StudentAttendanceActivity"
+                  android:label="@string/app_name"
+                  android:configChanges="keyboard|keyboardHidden">
+        </activity>
+
+        <activity android:name=".FileChooseActivity"
                   android:label="@string/file_choose_title">
         </activity>
     </application>
