--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
 
         <activity android:name=".StudentListMakerActivity"
-                  android:label="@string/app_name"
+                  android:label="@string/listmaker_title"
                   android:configChanges="keyboard|keyboardHidden">
         </activity>
 
