2012年7月2日 杉本祐介 ・設定画面を追加した ・設定内容を管理するクラスを追加した

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,5 +31,10 @@
                   android:label="@string/file_choose_title"
                   android:configChanges="keyboard|keyboardHidden">
         </activity>
+
+        <activity android:name=".SettingActivity"
+                  android:label="@string/setting_title"
+                  android:configChanges="keyboard|keyboardHidden">
+        </activity>
     </application>
 </manifest>
