2012年7月4日 杉本祐介 ・リスト作成画面に入る際にダイアログで確認するようにした ・PreferenceUtilityクラスの名前をPreferenceUtilに変更した ・FileChooseActivityクラスおよびFileListAdapterクラスの位置を変更した ・UtilクラスおよびPreferenceUtilクラスの位置を変更した ・binフォルダ以下の内容がコミットに含まれないようにした

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-sdk android:targetSdkVersion="10"
               android:minSdkVersion="10" />
 
+    <supports-screens android:smallScreens="true"
+                      android:normalScreens="true"
+                      android:largeScreens="true"
+                      android:anyDensity="true" />
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -25,17 +30,14 @@
 
         <activity android:name=".StudentListMakerActivity"
                   android:label="@string/listmaker_title"
-                  android:configChanges="keyboard|keyboardHidden">
-        </activity>
+                  android:configChanges="keyboard|keyboardHidden" />
 
-        <activity android:name=".FileChooseActivity"
+        <activity android:name=".filechoose.FileChooseActivity"
                   android:label="@string/file_choose_title"
-                  android:configChanges="keyboard|keyboardHidden">
-        </activity>
+                  android:configChanges="keyboard|keyboardHidden" />
 
         <activity android:name=".SettingActivity"
                   android:label="@string/setting_title"
-                  android:configChanges="keyboard|keyboardHidden">
-        </activity>
+                  android:configChanges="keyboard|keyboardHidden" />
     </application>
 </manifest>
