2012年7月11日 杉本祐介 ・位置情報の取得方法を設定できるようにした ・位置情報の出力フォーマットを設定できるようにした ・CSVの読み込み/書き込みにOpenCSVを使用するようにした ・Apache Licenseを表示できるようにした ・PreferenceUtilの各メソッドをスタティックメソッドから通常のメソッドに変更した ・アプリをSDカードに移動できるようにした ・リスト表示時、連番が-1である場合は連番の値を表示しないようにした ・学生データの編集時、連番を空にすると強制終了する不具合を修正した

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="jp.ddo.kingdragon.attendance"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0.0"
+          android:installLocation="auto">
     <uses-sdk android:targetSdkVersion="10"
               android:minSdkVersion="10" />
 
@@ -11,7 +12,7 @@
                       android:largeScreens="true"
                       android:anyDensity="true" />
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -38,6 +39,10 @@
 
         <activity android:name=".SettingActivity"
                   android:label="@string/setting_title"
+                  android:configChanges="keyboard|keyboardHidden" />
+
+        <activity android:name=".ApacheLicenseActivity"
+                  android:label="@string/setting_license_apache_title"
                   android:configChanges="keyboard|keyboardHidden" />
     </application>
 </manifest>
