--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,10 @@
                       android:anyDensity="true" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.nfc" />
@@ -28,6 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".DisasterModeActivity"
+                  android:label="@string/disaster_title"
+                  android:configChanges="keyboard|keyboardHidden" />
 
         <activity android:name=".StudentListMakerActivity"
                   android:label="@string/listmaker_title"
