--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
                  android:label="@string/app_name">
         <activity android:name=".StudentAttendanceActivity"
                   android:label="@string/app_name"
+                  android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,12 +33,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DisasterModeActivity"
-                  android:label="@string/disaster_title"
-                  android:configChanges="keyboard|keyboardHidden" />
-
         <activity android:name=".StudentListMakerActivity"
                   android:label="@string/listmaker_title"
+                  android:launchMode="singleTop"
+                  android:configChanges="keyboard|keyboardHidden" />
+
+        <activity android:name=".DisasterModeActivity"
+                  android:label="@string/disaster_title"
+                  android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden" />
 
         <activity android:name=".filechoose.FileChooseActivity"
