--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -45,10 +46,10 @@
                   android:label="@string/disaster_title"
                   android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden" />
-        
+
         <activity android:name=".CameraActivity"
                   android:label="@string/camera_title"
-                  android:screenOrientation="portrait"
+                  android:screenOrientation="landscape"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
         <activity android:name=".filechoose.FileChooseActivity"
@@ -56,6 +57,10 @@
                   android:configChanges="keyboard|keyboardHidden" />
 
         <activity android:name=".SettingActivity"
+                  android:label="@string/setting_title"
+                  android:configChanges="keyboard|keyboardHidden" />
+
+        <activity android:name=".CameraSettingActivity"
                   android:label="@string/setting_title"
                   android:configChanges="keyboard|keyboardHidden" />
 
