--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,14 +27,22 @@
 
     <application android:icon="@drawable/ic_launcher"
                  android:label="@string/app_name">
-        <activity android:name=".StudentAttendanceActivity"
+        <activity android:name=".SplashActivity"
                   android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity android:name=".StudentAttendanceActivity"
+                  android:label="@string/app_name"
+                  android:launchMode="singleTop"
+                  android:configChanges="keyboard|keyboardHidden">
         </activity>
 
         <activity android:name=".StudentListMakerActivity"
