--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="jp.ddo.kingdragon.attendance"
-          android:versionCode="12"
-          android:versionName="1.8.0"
+          android:versionCode="13"
+          android:versionName="1.8.1"
           android:installLocation="auto">
     <uses-sdk android:targetSdkVersion="10"
               android:minSdkVersion="10" />
@@ -26,7 +26,8 @@
     <uses-feature android:name="android.hardware.nfc" />
 
     <application android:icon="@drawable/ic_launcher"
-                 android:label="@string/app_name">
+                 android:label="@string/app_name"
+                 android:name=".CustomApplication">
         <activity android:name=".SplashActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
@@ -40,18 +41,23 @@
         </activity>
 
         <activity android:name=".StudentAttendanceActivity"
-                  android:label="@string/app_name"
+                  android:label="@string/attendance_title"
                   android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden">
         </activity>
+
+        <activity android:name=".DisasterModeActivity"
+                  android:label="@string/disaster_title"
+                  android:launchMode="singleTop"
+                  android:configChanges="keyboard|keyboardHidden" />
 
         <activity android:name=".StudentListMakerActivity"
                   android:label="@string/listmaker_title"
                   android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden" />
 
-        <activity android:name=".DisasterModeActivity"
-                  android:label="@string/disaster_title"
+        <activity android:name=".StudentRegisterActivity"
+                  android:label="@string/register_title"
                   android:launchMode="singleTop"
                   android:configChanges="keyboard|keyboardHidden" />
 
